# server/docs/swagger.yaml
@@ -1,12 +1,5 @@
 basePath: /api
 definitions:
-  db.GetPhotoRangeRow:
-    properties:
-      month:
-        type: string
-      year:
-        type: string
-    type: object
   handlers.CreateUserRequest:
     properties:
       clan_group_id:
@@ -39,37 +32,23 @@ definitions:
     - password
     - username
     type: object
+  models.AlbumResponse:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   models.IdentityListResponse:
     properties:
       identities:
         items:
           $ref: '#/definitions/models.IdentityResponse'
         type: array
-    type: object
-  models.IdentityRandomPhotoResponse:
-    properties:
-      album_id:
-        type: integer
-      file_name:
-        type: string
-      group_id:
-        type: integer
-      id:
-        type: integer
-      location_bottom:
-        type: integer
-      location_left:
-        type: integer
-      location_right:
-        type: integer
-      location_top:
-        type: integer
-      orientation:
-        type: integer
-      photo_created_at:
-        type: string
-      thumbnail_url:
-        type: string
     type: object
   models.IdentityResponse:
     properties:
@@ -91,9 +70,36 @@ definitions:
       name:
         type: string
     type: object
+  services.MediaItemRange:
+    properties:
+      month:
+        type: integer
+      year:
+        type: integer
+    type: object
 info:
   contact: {}
 paths:
+  /album/write:
+    get:
+      description: Get albums for write
+      parameters:
+      - description: Authorization
+        example: bearer token
+        format: bearer
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.AlbumResponse'
+            type: array
+      tags:
+      - Album
   /auth/login:
     post:
       consumes:
@@ -161,9 +167,9 @@ paths:
             $ref: '#/definitions/models.IdentityResponse'
       tags:
       - Identity
-  /photo:
+  /media-item:
     get:
-      description: 사진 목록 조회
+      description: 미디어 아이템 목록 조회
       parameters:
       - description: Authorization
         example: bearer token
@@ -188,11 +194,33 @@ paths:
         "200":
           description: OK
       tags:
-      - Photo
-  /photo/identity/{identity_id}/random:
-    get:
-      description: 신원 ID를 기반으로 랜덤 사진 조회
+      - MediaItem
+  /media-item/image/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      description: 이미지 업로드
       parameters:
+      - description: file
+        in: formData
+        name: file
+        required: true
+        type: file
+      - description: Album ID
+        in: query
+        name: album_id
+        required: true
+        type: string
+      - description: Upload Batch ID
+        in: query
+        name: upload_batch_id
+        required: true
+        type: string
+      - description: Retry
+        example: "1"
+        in: query
+        name: retry
+        type: string
       - description: Authorization
         example: bearer token
         format: bearer
@@ -200,19 +228,10 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: Identity ID
-        in: path
-        name: identity_id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.IdentityRandomPhotoResponse'
+      responses: {}
       tags:
-      - Photo
-  /photo/range:
+      - MediaItem
+  /media-item/range:
     get:
       description: 사진이 있는 년도와 월 목록 조회
       parameters:
@@ -228,21 +247,14 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/db.GetPhotoRangeRow'
+              $ref: '#/definitions/services.MediaItemRange'
             type: array
       tags:
-      - Photo
-  /photo/upload:
+      - MediaItem
+  /media-item/upload-batch:
     post:
-      consumes:
-      - multipart/form-data
-      description: 사진 업로드
+      description: 업로드 배치 생성
       parameters:
-      - description: file
-        in: formData
-        name: file
-        required: true
-        type: file
       - description: Album ID
         in: query
         name: album_id
@@ -257,28 +269,16 @@ paths:
         type: string
       responses: {}
       tags:
-      - Photo
-  /photo/upload-live/{album_id}:
-    post:
-      consumes:
-      - multipart/form-data
-      description: upload live photo
+      - MediaItem
+  /media-item/upload-batch/status:
+    get:
+      description: 업로드 배치 상태 조회
       parameters:
-      - description: photo
-        in: formData
-        name: photo
+      - description: Upload Batch ID
+        in: query
+        name: upload_batch_id
         required: true
-        type: file
-      - description: live
-        in: formData
-        name: live
-        required: true
-        type: file
-      - description: Album ID
-        in: path
-        name: album_id
-        required: true
-        type: integer
+        type: string
       - description: Authorization
         example: bearer token
         format: bearer
@@ -288,7 +288,7 @@ paths:
         type: string
       responses: {}
       tags:
-      - Photo
+      - MediaItem
   /user:
     post:
       description: create user
